--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container nav-container">
       <div class="nav-menu-container"><a href="index.html" aria-current="page"
           class="brand-link w-nav-brand w--current"><img src="../Assets/logo2.png" loading="lazy"
-            alt=""
+            alt="Digital Marketing Course in Saudi Arabia"
             class="w-[120px]" /></a>
         <nav role="navigation" class="nav-menu w-nav-menu">
           <div class="nav-link-holder"><a href="index.html" aria-current="page"
@@ -228,7 +228,7 @@
         style="opacity:0; transform:translate3d(0, 25px, 0); background-color: #7c1eef1c;"
         class="benefit-content-holder">
         <img src="./Assets/lifetime-learning.png"
-          loading="lazy" alt="Benefit Image 1" class="benefit-image" />
+          loading="lazy" alt="Digital Marketing Course in Riyadh" class="benefit-image" />
         <div class="benefit-title" data-en="Lifetime Access" data-ar="وصول مدى الحياة">
           Lifetime Access
         </div>
@@ -240,7 +240,7 @@
       <div id="w-node-da6501ae-0b1b-c86d-d122-7df813e57a31-6b6fabd7" data-w-id="da6501ae-0b1b-c86d-d122-7df813e57a31"
         class="benefit-content-holder" style="background-color: #45c8ca3d;">
         <img src="./Assets/mentor.png"
-          loading="lazy" alt="Benefit Image 2" class="benefit-image" />
+          loading="lazy" alt="Digital Marketing Course in Kuwait" class="benefit-image" />
         <div class="benefit-title" data-en="Expert Mentors" data-ar="مرشدون خبراء">
           Expert Mentors
         </div>
@@ -253,7 +253,7 @@
         style="opacity:0; transform:translate3d(0, 25px, 0); background-color: #7c1eef1c;"
         class="benefit-content-holder light-orange">
         <img src="./Assets/learning.png"
-          loading="lazy" alt="Benefit Image 3" class="benefit-image" />
+          loading="lazy" alt="Digital Marketing Course in Dubai" class="benefit-image" />
         <div class="benefit-title" data-en="Flexible Learning" data-ar="تعلم مرن">
           Flexible Learning
         </div>
@@ -291,7 +291,7 @@
                     <div class="full-card-holder">
                         <div class="font-card">
                             <div class="product-item-image-holder">
-                                <img alt="" loading="lazy" 
+                                <img alt="Digital Marketing Course in Qatar" loading="lazy" 
                                      data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D" 
                                      src="./Assets/AI-in-digital-marketing.jpg" 
                                      class="product-item-image" />
@@ -361,7 +361,7 @@
                                         <div class="product-item-price" style="display: flex;">
                                             <img src="Assets/saudia-riyal.png" 
                                                  style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                                 alt="">
+                                                 alt="Digital Marketing Course in Oman">
                                             <span data-en="899" data-ar="899"> 899</span>
                                         </div>
                                     </div>
@@ -391,7 +391,7 @@
                       <div class="font-card">
                           <div id="w-node-fa9a9906-a4f7-2b89-705f-8826378cc9e8-6b6fabd7"
                               class="product-item-image-holder type-2">
-                              <img alt="" loading="lazy"
+                              <img alt="Digital Marketing Course in UAE" loading="lazy"
                                   data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
                                   src="./Assets/business-with-ai.jpg"
                                   class="product-item-image" />
@@ -461,7 +461,7 @@
                                       <div class="product-item-price" style="display: flex;">
                                           <img src="Assets/saudia-riyal.png" 
                                                style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                               alt="">
+                                               alt="Digital Marketing Course in Jeddah">
                                           <span data-en="799" data-ar="799"> 799</span>
                                       </div>
                                   </div>
@@ -469,7 +469,7 @@
                               <div class="xbutton rotate">
                                   <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/6500215e2c50268eae2de8df_X Button.svg"
                                       loading="lazy"
-                                      alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com" />
+                                      alt="Graphic Design Course in Dubai" />
                               </div>
                           </div>
                       </div>
@@ -485,7 +485,7 @@
                 <div class="full-card-holder">
                     <div class="font-card">
                         <div class="product-item-image-holder">
-                            <img alt="" loading="lazy" 
+                            <img alt="Graphic Design Course in Oman" loading="lazy" 
                                 data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D" 
                                 src="./Assets/graphic-designing-video-editing.jpg" 
                                 class="product-item-image" />
@@ -555,7 +555,7 @@
                                     <div class="product-item-price" style="display: flex;">
                                         <img src="Assets/saudia-riyal.png" 
                                              style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                             alt="">
+                                             alt="Graphic Design Training in Kuwait">
                                         <span data-en="799" data-ar="799"> 799</span>
                                     </div>
                                 </div>
@@ -577,7 +577,7 @@
               <div class="full-card-holder">
                   <div class="font-card">
                       <div class="product-item-image-holder">
-                          <img alt="" loading="lazy"
+                          <img alt="Learn Graphic Design Online in Saudi Arabia" loading="lazy"
                               data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
                               src="../cdn.prod.website-files.com/64f5cb8432add1526b6fabec/651add609bc421d7065be5c4_Blog%20Item%20Image.png"
                               class="product-item-image" />
@@ -647,7 +647,7 @@
                                   <div class="product-item-price" style="display: flex;">
                                       <img src="Assets/saudia-riyal.png" 
                                            style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                           alt="">
+                                           alt="Graphic Design Course in Qatar">
                                       <span data-en="699" data-ar="699"> 699</span>
                                   </div>
                               </div>
@@ -666,7 +666,7 @@
                   <div class="font-card">
                       <div id="w-node-fa9a9906-a4f7-2b89-705f-8826378cc9e8-6b6fabd7"
                           class="product-item-image-holder type-2">
-                          <img alt="" loading="lazy"
+                          <img alt="Graphic Design Course in Riyadh" loading="lazy"
                               data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
                               src="./Assets/productivity.jpg"
                               class="product-item-image" />
@@ -738,7 +738,7 @@
                                   <div class="product-item-price" style="display: flex;">
                                       <img src="Assets/saudia-riyal.png" 
                                            style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                           alt="">
+                                           alt="Graphic Design Course in Jeddah">
                                       <span data-en="899" data-ar="899"> 899</span>
                                   </div>
                               </div>
@@ -761,7 +761,7 @@
             <div class="full-card-holder">
                 <div class="font-card">
                     <div class="product-item-image-holder">
-                        <img alt="" loading="lazy" 
+                        <img alt="Spanish Language Course in Qatar" loading="lazy" 
                              data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D" 
                              src="./Assets/app-development.jpg" 
                              class="product-item-image" />
@@ -831,7 +831,7 @@
                                 <div class="product-item-price" style="display: flex;">
                                     <img src="Assets/saudia-riyal.png" 
                                          style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                         alt="">
+                                         alt="Spanish Language Training in Saudi Arabia">
                                     <span data-en="849" data-ar="849">849</span>
                                 </div>
                             </div>
@@ -860,7 +860,7 @@
               <div class="font-card">
                   <div id="w-node-fa9a9906-a4f7-2b89-705f-8826378cc9e8-6b6fabd7"
                       class="product-item-image-holder type-2">
-                      <img alt="" loading="lazy"
+                      <img alt="Best Spanish Language Classes in Dubai" loading="lazy"
                           data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
                           src="./Assets/webb.jpg"
                           class="product-item-image" />
@@ -928,7 +928,7 @@
                               <div class="product-item-price" style="display: flex;">
                                   <img src="./Assets/saudia-riyal.png" 
                                        style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                       alt="">
+                                       alt="Online Spanish Training in UAE">
                                   <span data-en="799" data-ar="799"> 799</span>
                               </div>
                           </div>
@@ -963,7 +963,7 @@
         <div role="list" class="blog-grid w-dyn-items">
           <div role="listitem" class="blog-item w-dyn-item"><a data-w-id="9fa487a4-0b44-9c55-8fcf-cd409626b77a"
               href="post/discovering-webflow.html" class="blog-item-link w-inline-block">
-              <div class="blog-item-image-holder"><img alt="" loading="lazy"
+              <div class="blog-item-image-holder"><img alt="Spanish Language Course in Oman" loading="lazy"
                   src="../cdn.prod.website-files.com/64f5cb8432add1526b6fabec/64f836c130e4f55429f70023_Insights%20Image%201-min.jpg"
                   sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 93vw, (max-width: 1279px) 30vw, (max-width: 1439px) 346px, 406px"
                   srcset="https://cdn.prod.website-files.com/64f5cb8432add1526b6fabec/64f836c130e4f55429f70023_Insights%20Image%201-min-p-500.jpg 500w, https://cdn.prod.website-files.com/64f5cb8432add1526b6fabec/64f836c130e4f55429f70023_Insights%20Image%201-min.jpg 740w"
@@ -971,7 +971,7 @@
               <div class="read-this-blog"><img
                   src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f87b56c6bc3f6674634099_Read This Blog Arrow.svg"
                   loading="lazy"
-                  alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com" />
+                  alt="Spanish Language Course in Jeddah" />
                 <div>Read this blog</div>
               </div>
               <div class="blog-item-category">
@@ -986,7 +986,7 @@
             </a></div>
           <div role="listitem" class="blog-item w-dyn-item"><a data-w-id="9fa487a4-0b44-9c55-8fcf-cd409626b77a"
               href="post/top-10-webflow-template-categories.html" class="blog-item-link w-inline-block">
-              <div class="blog-item-image-holder"><img alt="" loading="lazy"
+              <div class="blog-item-image-holder"><img alt="AI Master Class in Saudi Arabia" loading="lazy"
                   src="../cdn.prod.website-files.com/64f5cb8432add1526b6fabec/64f836ce0ea749e53ff74977_Insights%20Image%202-min.jpg"
                   sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 93vw, (max-width: 1279px) 30vw, (max-width: 1439px) 346px, 406px"
                   srcset="https://cdn.prod.website-files.com/64f5cb8432add1526b6fabec/64f836ce0ea749e53ff74977_Insights%20Image%202-min-p-500.jpg 500w, https://cdn.prod.website-files.com/64f5cb8432add1526b6fabec/64f836ce0ea749e53ff74977_Insights%20Image%202-min.jpg 740w"
@@ -994,7 +994,7 @@
               <div class="read-this-blog"><img
                   src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f87b56c6bc3f6674634099_Read This Blog Arrow.svg"
                   loading="lazy"
-                  alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com" />
+                  alt="Best AI Certification Course in UAE" />
                 <div>Read this blog</div>
               </div>
               <div class="blog-item-category">
