--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
             </a></div>
           <div role="listitem" class="blog-item w-dyn-item"><a data-w-id="9fa487a4-0b44-9c55-8fcf-cd409626b77a"
               href="post/e-commerce.html" class="blog-item-link w-inline-block">
-              <div class="blog-item-image-holder"><img alt="" loading="lazy"
+              <div class="blog-item-image-holder"><img alt="Online Digital Marketing Course in Saudi Arabia" loading="lazy"
                   src="../cdn.prod.website-files.com/64f5cb8432add1526b6fabec/64f836d6ce75548f3a012a48_Insights%20Image%203-min.jpg"
                   sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 93vw, (max-width: 1279px) 30vw, (max-width: 1439px) 346px, 406px"
                   srcset="https://cdn.prod.website-files.com/64f5cb8432add1526b6fabec/64f836d6ce75548f3a012a48_Insights%20Image%203-min-p-500.jpg 500w, https://cdn.prod.website-files.com/64f5cb8432add1526b6fabec/64f836d6ce75548f3a012a48_Insights%20Image%203-min.jpg 740w"
@@ -1017,7 +1017,7 @@
               <div class="read-this-blog"><img
                   src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f87b56c6bc3f6674634099_Read This Blog Arrow.svg"
                   loading="lazy"
-                  alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com" />
+                  alt="Certified Digital Marketing Course in Riyadh" />
                 <div>Read this blog</div>
               </div>
               <div class="blog-item-category">
@@ -1052,7 +1052,7 @@
           <div class="testimonials-cards-holder">
             <div class="testimonials-card">
               <div class="testimonials-image-holder">
-                <img src="./Assets/profile.png" loading="lazy" alt="User Testimonial" class="_100pct-image" />
+                <img src="./Assets/profile.png" loading="lazy" alt="Best Digital Marketing Institute in Kuwait" class="_100pct-image" />
               </div>
               <p class="testimonials-paragraph" style="color: white;" data-en="Scitor Academy isn't just an educational institution; it's a platform for lifelong learning." data-ar="Scitor Academy ليست مجرد مؤسسة تعليمية، بل هي منصة للتعلم مدى الحياة.">
                 Scitor Academy isn't just an educational institution; it's a platform for lifelong learning.
@@ -1062,7 +1062,7 @@
             </div>
             <div class="testimonials-card _2">
               <div class="testimonials-image-holder">
-                <img src="./Assets/profile.png" loading="lazy" alt="User Testimonial" class="_100pct-image" />
+                <img src="./Assets/profile.png" loading="lazy" alt="Digital Marketing Classes in Dubai" class="_100pct-image" />
               </div>
               <p class="testimonials-paragraph" style="color: white;" data-en="The courses available helped me stay ahead in my career." data-ar="الدورات المتاحة ساعدتني على التقدم في مسيرتي المهنية.">
                 The courses available helped me stay ahead in my career.
@@ -1072,7 +1072,7 @@
             </div>
             <div class="testimonials-card _3">
               <div class="testimonials-image-holder">
-                <img src="./Assets/profile.png" loading="lazy" alt="User Testimonial" class="_100pct-image" />
+                <img src="./Assets/profile.png" loading="lazy" alt="Advanced Digital Marketing Training in Qatar" class="_100pct-image" />
               </div>
               <p class="testimonials-paragraph" style="color: white;" data-en="A great platform to gain knowledge and expertise!" data-ar="منصة رائعة لاكتساب المعرفة والخبرة!">
                 A great platform to gain knowledge and expertise!
@@ -1095,7 +1095,7 @@
           <div class="fade-in-move-on-scroll">
             <div class="footer-brand-content">
               <a href="index.html" aria-current="page" class="footer-logo-link w--current">
-                <img src="../Assets/logo2.png" alt="شعار Scitor" class="footer-image" />
+                <img src="../Assets/logo2.png" alt="Digital Marketing Certification in Oman" class="footer-image" />
               </a>
               <div class="footer-description" data-en="Empowering minds with skills for the future. Learn. Grow. Succeed." data-ar="تمكين العقول بالمهارات للمستقبل. تعلم. نمُ. انجح.">
                 Empowering minds with skills for the future. Learn. Grow. Succeed.
