--- a/courses.html
+++ b/courses.html
@@ -54,7 +54,7 @@
       <div class="container nav-container">
         <div class="nav-menu-container"><a href="index.html" class="brand-link w-nav-brand"><img
               src="../Assets/logo2.png" loading="lazy"
-              alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com" class=""
+              alt="Online Digital Marketing Program in UAE" class=""
               style="width: 120px;" /></a>
           <nav role="navigation" class="nav-menu w-nav-menu">
             <div class="nav-link-holder"><a href="index.html" class="link-block navbar-link w-inline-block">
@@ -93,7 +93,7 @@
 
           <div class="menu-button w-nav-button"><img
               src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f5cb8432add1526b6fabf4_menu-icon.svg"
-              loading="lazy" alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+              loading="lazy" alt="Learn Digital Marketing in Jeddah"
               class="menu-icon" /></div>
         </div>
       </div>
@@ -168,7 +168,7 @@
                       <div class="full-card-holder">
                           <div class="font-card">
                               <div class="product-item-image-holder">
-                                  <img alt="" loading="lazy" 
+                                  <img alt="Digital Marketing Course with Placement in Dubai" loading="lazy" 
                                        data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D" 
                                        src="./Assets/AI-in-digital-marketing.jpg" 
                                        class="product-item-image" />
@@ -238,7 +238,7 @@
                                           <div class="product-item-price" style="display: flex;">
                                               <img src="Assets/saudia-riyal.png" 
                                                    style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                                   alt="">
+                                                   alt="Top Digital Marketing Coaching in Saudi Arabia">
                                               <span data-en="899" data-ar="899"> 899</span>
                                           </div>
                                       </div>
@@ -268,7 +268,7 @@
                         <div class="font-card">
                             <div id="w-node-fa9a9906-a4f7-2b89-705f-8826378cc9e8-6b6fabd7"
                                 class="product-item-image-holder type-2">
-                                <img alt="" loading="lazy"
+                                <img alt="Graphic Design Certification Course in Dubai" loading="lazy"
                                     data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
                                     src="./Assets/business-with-ai.jpg"
                                     class="product-item-image" />
@@ -338,7 +338,7 @@
                                         <div class="product-item-price" style="display: flex;">
                                             <img src="Assets/saudia-riyal.png" 
                                                  style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                                 alt="">
+                                                 alt="Online Graphic Designing Course in Oman">
                                             <span data-en="799" data-ar="799"> 799</span>
                                         </div>
                                     </div>
@@ -346,7 +346,7 @@
                                 <div class="xbutton rotate">
                                     <img src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/6500215e2c50268eae2de8df_X Button.svg"
                                         loading="lazy"
-                                        alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com" />
+                                        alt="Best Graphic Design Classes in Kuwait" />
                                 </div>
                             </div>
                         </div>
@@ -362,7 +362,7 @@
                   <div class="full-card-holder">
                       <div class="font-card">
                           <div class="product-item-image-holder">
-                              <img alt="" loading="lazy" 
+                              <img alt="Learn Graphic Design in Saudi Arabia Online" loading="lazy" 
                                   data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D" 
                                   src="./Assets/graphic-designing-video-editing.jpg" 
                                   class="product-item-image" />
@@ -432,7 +432,7 @@
                                       <div class="product-item-price" style="display: flex;">
                                           <img src="Assets/saudia-riyal.png" 
                                                style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                               alt="">
+                                               alt="Advanced Graphic Designing Training in Qatar">
                                           <span data-en="799" data-ar="799"> 799</span>
                                       </div>
                                   </div>
@@ -454,7 +454,7 @@
                 <div class="full-card-holder">
                     <div class="font-card">
                         <div class="product-item-image-holder">
-                            <img alt="" loading="lazy"
+                            <img alt="Graphic Design Course Near Me in Riyadh" loading="lazy"
                                 data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
                                 src="../cdn.prod.website-files.com/64f5cb8432add1526b6fabec/651add609bc421d7065be5c4_Blog%20Item%20Image.png"
                                 class="product-item-image" />
@@ -524,7 +524,7 @@
                                     <div class="product-item-price" style="display: flex;">
                                         <img src="Assets/saudia-riyal.png" 
                                              style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                             alt="">
+                                             alt="Online Graphic Design Course in Jeddah">
                                         <span data-en="699" data-ar="699"> 699</span>
                                     </div>
                                 </div>
@@ -543,7 +543,7 @@
                     <div class="font-card">
                         <div id="w-node-fa9a9906-a4f7-2b89-705f-8826378cc9e8-6b6fabd7"
                             class="product-item-image-holder type-2">
-                            <img alt="" loading="lazy"
+                            <img alt="UI/UX and Graphic Design Course in UAE" loading="lazy"
                                 data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
                                 src="./Assets/productivity.jpg"
                                 class="product-item-image" />
@@ -615,7 +615,7 @@
                                     <div class="product-item-price" style="display: flex;">
                                         <img src="Assets/saudia-riyal.png" 
                                              style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                             alt="">
+                                             alt="Visual Design Course in Saudi Arabia">
                                         <span data-en="899" data-ar="899"> 899</span>
                                     </div>
                                 </div>
@@ -638,7 +638,7 @@
               <div class="full-card-holder">
                   <div class="font-card">
                       <div class="product-item-image-holder">
-                          <img alt="" loading="lazy" 
+                          <img alt="Graphic Design Diploma Program in Kuwait" loading="lazy" 
                                data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D" 
                                src="./Assets/app-development.jpg" 
                                class="product-item-image" />
@@ -708,7 +708,7 @@
                                   <div class="product-item-price" style="display: flex;">
                                       <img src="Assets/saudia-riyal.png" 
                                            style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                           alt="">
+                                           alt="Online Spanish Speaking Course in Qatar">
                                       <span data-en="849" data-ar="849">849</span>
                                   </div>
                               </div>
@@ -737,7 +737,7 @@
                 <div class="font-card">
                     <div id="w-node-fa9a9906-a4f7-2b89-705f-8826378cc9e8-6b6fabd7"
                         class="product-item-image-holder type-2">
-                        <img alt="" loading="lazy"
+                        <img alt="Spanish for Beginners in Saudi Arabia" loading="lazy"
                             data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
                             src="./Assets/webb.jpg"
                             class="product-item-image" />
@@ -805,7 +805,7 @@
                                 <div class="product-item-price" style="display: flex;">
                                     <img src="./Assets/saudia-riyal.png" 
                                          style="width: 28px; object-fit: contain; padding: 0px 3px;" 
-                                         alt="">
+                                         alt="Spanish Classes with Native Tutors in Dubai">
                                     <span data-en="799" data-ar="799"> 799</span>
                                 </div>
                             </div>
@@ -944,7 +944,7 @@
           <div class="fade-in-move-on-scroll">
             <div class="footer-brand-content">
               <a href="index.html" aria-current="page" class="footer-logo-link w--current">
-                <img src="../Assets/logo2.png" alt="شعار Scitor" class="footer-image" />
+                <img src="../Assets/logo2.png" alt="Best Online Spanish Course in UAE" class="footer-image" />
               </a>
               <div class="footer-description" data-en="Empowering minds with skills for the future. Learn. Grow. Succeed." data-ar="تمكين العقول بالمهارات للمستقبل. تعلم. نمُ. انجح.">
                 Empowering minds with skills for the future. Learn. Grow. Succeed.
