--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
     <div class="container nav-container">
       <div class="nav-menu-container"><a href="index.html" class="brand-link w-nav-brand"><img
             src="../Assets/logo2.png"
-            loading="lazy" alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+            loading="lazy" alt="Learn to Speak Spanish in Jeddah"
             class=""
             style="width: 120px;" /></a>
         <nav role="navigation" class="nav-menu w-nav-menu">
@@ -91,7 +91,7 @@
         
         <div class="menu-button w-nav-button"><img
             src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f5cb8432add1526b6fabf4_menu-icon.svg"
-            loading="lazy" alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+            loading="lazy" alt="Certified Spanish Language Program in Qatar"
             class="menu-icon" /></div>
       </div>
     </div>
@@ -149,7 +149,7 @@
             src="./Assets/AI-in-digital-marketing.jpg"
             loading="lazy" sizes="(max-width: 767px) 220px, (max-width: 991px) 250px, 450px"
             
-            alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+            alt="AI and Machine Learning Course in Saudi Arabia"
             class="company-image" /></div>
         <div id="w-node-_0241a068-ff04-32f1-cc40-2346ffd7c530-ffd7c529" class="company-image-holder"><img
             src="./Assets/graphic desiging.jpeg.jpg"
@@ -232,7 +232,7 @@
               src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64feda8a3027019e6fd2816f_About Us Image .webp"
               loading="lazy" sizes="(max-width: 479px) 299.9921875px, 399.9921875px"
               srcset="https://assets-global.website-files.com/64f5cb8332add1526b6fab02/64feda8a3027019e6fd2816f_About%20Us%20Image%20-p-500.webp 500w, https://assets-global.website-files.com/64f5cb8332add1526b6fab02/64feda8a3027019e6fd2816f_About%20Us%20Image%20-p-800.webp 800w, https://assets-global.website-files.com/64f5cb8332add1526b6fab02/64feda8a3027019e6fd2816f_About%20Us%20Image%20.webp 987w"
-              alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+              alt="Online Digital Marketing Course in Saudi Arabia"
               class="about-us-image" />
             <div data-w-id="8331c711-1760-7329-07d0-20a8f2336d7b"
               style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
@@ -253,7 +253,7 @@
           <div class="fade-in-move-on-scroll">
             <div class="footer-brand-content">
               <a href="index.html" aria-current="page" class="footer-logo-link w--current">
-                <img src="../Assets/logo2.png" alt="شعار Scitor" class="footer-image" />
+                <img src="../Assets/logo2.png" alt="Certified Digital Marketing Course in Riyadh" class="footer-image" />
               </a>
               <div class="footer-description" data-en="Empowering minds with skills for the future. Learn. Grow. Succeed." data-ar="تمكين العقول بالمهارات للمستقبل. تعلم. نمُ. انجح.">
                 Empowering minds with skills for the future. Learn. Grow. Succeed.
