--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     <div class="container nav-container">
       <div class="nav-menu-container"><a href="index.html" class="brand-link w-nav-brand"><img
             src="../Assets/logo2.png"
-            loading="lazy" alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+            loading="lazy" alt="Best Digital Marketing Institute in Kuwait"
             class="" style="width: 120px;" /></a>
         <nav role="navigation" class="nav-menu w-nav-menu">
           <div class="nav-link-holder"><a href="index.html" class="link-block navbar-link w-inline-block">
@@ -99,7 +99,7 @@
         </div>
         <div class="menu-button w-nav-button"><img
             src="https://cdn.prod.website-files.com/64f5cb8332add1526b6fab02/64f5cb8432add1526b6fabf4_menu-icon.svg"
-            loading="lazy" alt="Education Webflow Template - Cambridge - Created by Wedoflow.com and Azwedo.com"
+            loading="lazy" alt="Digital Marketing Classes in Dubai"
             class="menu-icon" /></div>
       </div>
     </div>
@@ -184,7 +184,7 @@
           <div class="fade-in-move-on-scroll">
             <div class="footer-brand-content">
               <a href="index.html" aria-current="page" class="footer-logo-link w--current">
-                <img src="../Assets/logo2.png" alt="شعار Scitor" class="footer-image" />
+                <img src="../Assets/logo2.png" alt="Advanced Digital Marketing Training in Qatar" class="footer-image" />
               </a>
               <div class="footer-description" data-en="Empowering minds with skills for the future. Learn. Grow. Succeed." data-ar="تمكين العقول بالمهارات للمستقبل. تعلم. نمُ. انجح.">
                 Empowering minds with skills for the future. Learn. Grow. Succeed.
