--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <html data-wf-domain="az-cambridge.webflow.io" data-wf-page="64f5cb8432add1526b6fabd7" data-wf-site="64f5cb8332add1526b6fab02" lang="en" dir="ltr">
 <head>
     <!-- Primary Meta Tags -->
-<title>  Scitor Academy</title>
-<meta name="title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta name="description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+<title>Digital Marketing Institute in Saudi Arabia & Kuwait | Scitor</title>
+<meta name="title" content="Digital Marketing Institute in Saudi Arabia & Kuwait | Scitor" />
+<meta name="description" content="Boost your career with a digital marketing course in Saudi Arabia. Learn online with Scitor Academy for a better career in Digital Marketing. Enroll Today!" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta property="og:description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+<meta property="og:title" content="Digital Marketing Institute in Saudi Arabia & Kuwait | Scitor" />
+<meta property="og:description" content="Boost your career with a digital marketing course in Saudi Arabia. Learn online with Scitor Academy for a better career in Digital Marketing. Enroll Today!" />
  
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta property="twitter:description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+<meta property="twitter:title" content="Digital Marketing Institute in Saudi Arabia & Kuwait | Scitor" />
+<meta property="twitter:description" content="Boost your career with a digital marketing course in Saudi Arabia. Learn online with Scitor Academy for a better career in Digital Marketing. Enroll Today!" />
 <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="../assets-global.website-files.com\64f5cb8332add1526b6fab02\css\az-cambridge.webflow.3d8ed26ef.css"
     rel="stylesheet" type="text/css" />
