--- a/courses.html
+++ b/courses.html
@@ -5,24 +5,24 @@
 <!-- Mirrored from az-cambridge.webflow.io/courses by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Dec 2024 09:06:30 GMT -->
 
 <head>
-  <title> Scitor Academy</title>
-  <meta name="title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <title>Top AI Certification Course in Saudi Arabia | AI Masterclass</title>
+  <meta name="title" content="Top AI Certification Course in Saudi Arabia | AI Masterclass" />
   <meta name="description"
-    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+    content="Enroll in the best AI certification course in Saudi Arabia. Learn online with expert guidance from Scitor Academy. Join now to get certified in AI skills. Apply Now!" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
 
-  <meta property="og:title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <meta property="og:title" content="Top AI Certification Course in Saudi Arabia | AI Masterclass" />
   <meta property="og:description"
-    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+    content="Enroll in the best AI certification course in Saudi Arabia. Learn online with expert guidance from Scitor Academy. Join now to get certified in AI skills. Apply Now!" />
 
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:title" content="Best Digital Marketing Institute | Scitor Academy" />
+  <meta property="twitter:title" content="Top AI Certification Course in Saudi Arabia | AI Masterclass" />
   <meta property="twitter:description"
-    content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+    content="Enroll in the best AI certification course in Saudi Arabia. Learn online with expert guidance from Scitor Academy. Join now to get certified in AI skills. Apply Now!" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link href="../assets-global.website-files.com/64f5cb8332add1526b6fab02/css/az-cambridge.webflow.3d8ed26ef.css"
