--- a/about.html
+++ b/about.html
@@ -5,21 +5,21 @@
 <!-- Mirrored from az-cambridge.webflow.io/about by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Dec 2024 09:06:30 GMT -->
 
 <head>
-  <title>  Scitor Academy</title>
-<meta name="title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta name="description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+  <title>Top Graphic Design Training in Saudi Arabia & Kuwait | Scitor</title>
+<meta name="title" content="Top Graphic Design Training in Saudi Arabia & Kuwait | Scitor" />
+<meta name="description" content="Learn graphic design online in Saudi Arabia with Scitor Academy, the best place to study graphic design. Flexible online sessions and certification. Contact Us!" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
  
-<meta property="og:title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta property="og:description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+<meta property="og:title" content="Top Graphic Design Training in Saudi Arabia & Kuwait | Scitor" />
+<meta property="og:description" content="Learn graphic design online in Saudi Arabia with Scitor Academy, the best place to study graphic design. Flexible online sessions and certification. Contact Us!" />
  
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:title" content="Best Digital Marketing Institute | Scitor Academy" />
-<meta property="twitter:description" content="Scitor Academy offers expert-led courses in web development, digital marketing, graphic design, and app development in Malappuram, Saudi Arabia, and Riyadh" />
+<meta property="twitter:title" content="Top Graphic Design Training in Saudi Arabia & Kuwait | Scitor" />
+<meta property="twitter:description" content="Learn graphic design online in Saudi Arabia with Scitor Academy, the best place to study graphic design. Flexible online sessions and certification. Contact Us!" />
 <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="../assets-global.website-files.com/64f5cb8332add1526b6fab02/css/az-cambridge.webflow.3d8ed26ef.css"
     rel="stylesheet" type="text/css" />
